--- a/homesweethome/src/main/webapp/resources/css/staff_style/staff_style.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/staff_style.css
@@ -5,10 +5,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: NanumSquare_ac;
 }
 
 body.body {
-    font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     color: #333;
 }
