--- a/homesweethome/src/main/webapp/resources/css/staff_style/employee.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/employee.css
@@ -6,6 +6,9 @@
     gap: 20px;
 }
 
+.ineerWrapper{
+	padding: 20px 0;
+}
 
 /* Search Container */
 .search-container {
@@ -18,34 +21,51 @@
 /* Search Bar */
 .search-bar {
     display: flex;
-    justify-content: flex-end; /* 오른쪽 정렬 */
-    align-items: center; /* 수직 가운데 정렬 */
-    gap: 10px; /* 요소 간 간격 */
+    gap: 17px; /* 요소 간 간격 */
     margin-bottom: 20px;
 }
 
+.regi_button{
+	display: block;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #ff6600;;
+    border: none;
+    border-radius: 5px;
+    margin-right: 54%;
+    transition: background-color 0.3s ease;
+}
+.regi_button:hover {
+    background-color: #FF3300;
+}
 .refresh-button {
     background-color: transparent;
     border: none;
     font-size: 20px;
     cursor: pointer;
 }
+.ineer_sort_select{
+	padding: 10px 20px;
 
+}
 .sort-select, .search-input, .search-button {
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 14px;
+    align-items: center;
+    justify-content: center;
 }
 
-.search-input {
-    width: 250px; /* 입력 필드의 너비 */
+.sort-select {
+	padding:12px;
 }
 
 .search-button {
     background-color: #333;
     color: white;
     cursor: pointer;
+    padding:11px;
 }
 
 .search-button:hover {
