--- a/homesweethome/src/main/webapp/resources/css/staff_style/s_main.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/s_main.css
@@ -4,10 +4,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: NanumSquare_ac;
 }
 
 body {
-    font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     color: #333;
 }
@@ -53,7 +53,6 @@ body {
     border-bottom: 1px solid #C6C6C6;
     padding: 15px 0;
     border-radius: 10px;
-
 }
 
 .main_menu ul {
@@ -69,6 +68,7 @@ body {
     padding: 5px 10px;
     transition: color 0.3s;
     font-size: 20px;
+	font-family: NanumSquare_ac ExtraBold;
 }
 
 .main_menu ul li a:hover {
