0110 입양신청페이지까지

--- a/homesweethome/src/main/webapp/resources/css/staff_style/adoption.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/adoption.css
@@ -15,8 +15,9 @@
 /* Search Bar */
 .search-bar {
     display: flex;
-    gap: 12.5px; /* 요소 간 간격 */
+    gap: 17px; /* 요소 간 간격 */
     margin-bottom: 20px;
+    padding-left: 61.3%
 }
 
 .regi_button{
