--- a/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
@@ -16,6 +16,63 @@
     border-radius: 10px;
     padding: 2% 3%;
 }
+
+
+/* Search Bar */
+.search-bar {
+    display: flex;
+    gap: 17px; /* 요소 간 간격 */
+    margin-bottom: 20px;
+}
+
+.regi_button{
+	display: block;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #ff6600;;
+    border: none;
+    border-radius: 5px;
+    margin-left: 88%;
+    transition: background-color 0.3s ease;
+}
+.regi_button:hover {
+    background-color: #FF3300;
+}
+.refresh-button {
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+.ineer_sort_select{
+	padding: 10px 20px;
+
+}
+.sort-select, .search-input, .search-button {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+    align-items: center;
+    justify-content: center;
+}
+
+.sort-select {
+	padding: 5px 20px;	
+}
+
+
+.search-button {
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    padding:11px;
+}
+
+.search-button:hover {
+    background-color: #555;
+}
+
 .back_group{
 	display: flex;
 	align-items: end;
@@ -48,7 +105,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 40%;
 }
 
 .button:hover {
@@ -63,21 +119,25 @@
 
 .st-list-button-container {
     display: flex;
-    justify-content: right;
-    width: 93%;
-    padding-left: 87%;
+    width: 100%;
+    margin-bottom: 2%;
 }
 
 .table {
     width: 100%;
     margin-top: 20px;
-    border-collapse: collapse;
+   
 }
-
+.td, input_form{
+	border: none;
+	text-align: left;
+	border: none;
+	text-align: left;
+	border: 1px solid #c6c6c6;
+	width: 100px;
+}
 .table th, .table td {
     border: 1px solid #ddd;
-    padding: 10px;
-    text-align: center;
     font-size: 14px;
 }
 
@@ -94,26 +154,12 @@
 	vertical-align: middle;
 }
 
-table.table td.injection-num{
+table.table td.middle{
 	padding-left: 20px;
 }
 
-table.table td.injection-num p,label{
-	margin: 0 20px;
-	display: inline-flex;
-	flex-direction: row;
-	align-items: center;
-	float: left;
-}
-
-table.table td.injection-num p{
-	width: 80px;
-}
-
 /* basic-table */
-table.table td{
-	width: 25%;
-}
+
 .td_inner{
 	text-align: left;
 }
@@ -169,12 +215,12 @@ td {
   border: 1px solid #ccc;
 }
 
-.left-cell {
+.center_cell {
   background-color: #f0f0f0; /* 회색 배경 */
   text-align: center;       /* 가운데 정렬 */
 }
 
-.right-cell {
+.left_cell {
   background-color: #ffffff; /* 흰색 배경 */
   text-align: left;          /* 왼쪽 정렬 */
 }
