--- a/homesweethome/src/main/webapp/resources/css/member_style/online.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/online.css
@@ -21,14 +21,15 @@
 }
 
 .content img {
-	max-width: 100%; /* 이미지가 화면 너비를 넘지 않도록 */
+	width: 70%; /* 이미지가 화면 너비를 넘지 않도록 */
 	height: auto; /* 비율 유지 */
+	margin-left: 13%;
 }
 
 .button-container {
 	position: absolute; /* 이미지 위로 버튼을 배치 */
-	bottom: -48%;
-    left: 55%;
+	bottom: -30%;
+    left: 41%;
 	transform: translateX(-50%); /* 중앙 정렬을 위한 트릭 */
 	
 }
@@ -38,9 +39,9 @@
     text-decoration: none;
     background-color: #f68b1e;
     color: #fff;
-    padding: 17px 26px;
+    padding: 12px 19px;
     border-radius: 35px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     transition: background-color 0.3s ease;
     font-family: NanumSquare_ac;
