--- a/homesweethome/src/main/webapp/resources/css/member_style/suit.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/suit.css
@@ -15,7 +15,13 @@
 	height: auto;
 	margin-right: 6px;
 }
-
+div.content-wrapper{
+	width: calc(100% - 250px);
+	height: 100%;
+	margin: 10px;
+	display: flex;
+	flex-direction: column;
+}
 
 .inner_container{
 	display: flex;
@@ -27,12 +33,12 @@
 	border-radius: 50%;
 }
 .info-text {
-	font-size: 14px;
+	font-size: 15px;
 	line-height: 1.6;
 	color: #333;
 	margin-bottom: 20px;
 	margin-left: 4%;
-	width: 507px;
+	width: 548px;
 }
 
 .info-text ul {
