--- a/homesweethome/src/main/webapp/resources/css/member_style/common.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/common.css
@@ -1,11 +1,7 @@
 @charset "UTF-8";
 
 div.content-wrapper{
-	width: calc(100% - 240px);
-	height: 100%;
-	margin: 10px;
-	display: flex;
-	flex-direction: column;
+	width: 90%;
 }
 div.content-title{
 	width: 100%;
@@ -26,4 +22,73 @@ div.content-body{
 	align-items: center;
 	justify-content: center;
 	border: solid 1px #E6E6E6;
+}
+
+/* Main Content */
+.main-content {
+    display: flex;
+    gap: 20px;
+
+}
+
+/* Search Bar */
+.search-bar {
+    display: flex;
+    justify-content: flex-end; /* 오른쪽 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    gap: 10px; /* 요소 간 간격 */
+    margin-bottom: 20px;
+}
+
+.refresh-button {
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.sort-select, .search-input, .search-button {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.search-input {
+    width: 250px; /* 입력 필드의 너비 */
+}
+
+.search-button {
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: #555;
+}
+
+
+/* Member Table */
+.member-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.member-table th, .member-table td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+}
+
+.member-table th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+.member-table td {
+    color: #666;
 }
