--- a/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
@@ -181,6 +181,10 @@ input.table-input-date{
 	border: none;
 	outline: none;
 }
+input.input_form_notnull{
+	outline: none;
+	border: none;
+}
 
 input.table-input-radio{
 	margin: 0 10px;
