0122_board CRUD(ing)_employee(ing)

--- a/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/regist_style.css
@@ -138,7 +138,6 @@
 }
 .table th, .table td {
     border: 1px solid #ddd;
-    font-size: 14px;
 }
 
 .table th {
@@ -148,6 +147,9 @@
 
 .table td {
     color: #666;
+}
+.table span{
+	color: #000000;
 }
 
 .table td, .table th{
