--- a/homesweethome/src/main/webapp/resources/css/staff_style/detail_style.css
+++ b/homesweethome/src/main/webapp/resources/css/staff_style/detail_style.css
@@ -140,7 +140,6 @@ h3 {
 	background-color: #f0f0f0;
 	padding: 10px;
 	border: 1px solid #ccc;
-	font-size: 14px;
 }
 
 .info-table td, .reason-table td {
@@ -197,3 +196,45 @@ label a:hover {
 .required {
 	color: red;
 }
+
+
+
+.photo-upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.photo-preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.photo-preview img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.photo-upload label {
+    display: inline-block;
+    cursor: pointer;
+    color: #007bff;
+    text-decoration: underline;
+}
+
+.photo-upload input[type="file"] {
+    display: none;
+}
+.file-name {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #333;
+}
+
