--- a/homesweethome/src/main/webapp/resources/css/mmain_style.css
+++ b/homesweethome/src/main/webapp/resources/css/mmain_style.css
@@ -168,3 +168,19 @@ header {
     padding: 20px 0;
     text-align: left;
 }
+
+.header_top .top_bar ul {
+    display: flex; /* 가로 정렬 */
+    list-style: none; /* 기본 리스트 스타일 제거 */
+    padding: 0; /* 여백 제거 */
+    margin: 0; /* 여백 제거 */
+}
+
+.header_top .top_bar ul li {
+    margin-right: 10px; /* 메뉴 항목 사이의 간격 */
+}
+
+.header_top .top_bar ul li a {
+    text-decoration: none; /* 링크 밑줄 제거 */
+    color: #fff; /* 텍스트 색상 설정 */
+}
