--- a/homesweethome/src/main/webapp/resources/css/member_style/application.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/application.css
@@ -77,7 +77,7 @@ div.content-wrapper{
 
 .button-container {
 	text-align: center;
-	margin-top: 35%;
+	/* margin-top: 35%; */
 	display: block;
 }
 
