--- a/homesweethome/src/main/webapp/resources/css/member_style/board.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/board.css
@@ -206,7 +206,8 @@ div.buttons-wrapper button{
     border: none;
     border-radius: 5px;
    justify-content: flex-start;
-   margin-right: 35.67em;
+  /*  margin-right: 35.67em; */
+   margin-right: 32.9em;
 }
 
 .regist-btn:hover {
