--- a/homesweethome/src/main/webapp/resources/css/member_style/m_main.css
+++ b/homesweethome/src/main/webapp/resources/css/member_style/m_main.css
@@ -196,6 +196,19 @@ section .inner_cent{
     font-weight: bold;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.status_bar {
+    /* position: absolute; */
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #01a479;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
 .animal-card {
     display: flex;
